[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Forests FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.140", features = ["derive"] }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.14.0", features = ["server"] }

# Local
parachain-template-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "polkadot-v0.9.27" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "polkadot-v0.9.27" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "polkadot-v0.9.27" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# Selendra
selendra-cli = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
selendra-parachain = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
selendra-primitives = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
selendra-service = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
xcm = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1", default-features = false }

# Forests
forests-client-cli = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-client-collator = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-client-consensus-aura = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-client-consensus-common = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-client-network = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-client-service = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-primitives-core = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-primitives-parachain-inherent = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-relay-chain-inprocess-interface = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-relay-chain-interface = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }
forests-relay-chain-rpc-interface = { git = "https://github.com/selendra/selendra", tag = "0.2.1-1" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
default = []
runtime-benchmarks = [
	"parachain-template-runtime/runtime-benchmarks",
	"selendra-cli/runtime-benchmarks",
]
try-runtime = ["parachain-template-runtime/try-runtime"]